@@ -1,0 +1,8 @@
+{
+    "variants": {
+        "status=0": { "model": "runecraftory:cherry_grass_stage0" },
+        "status=1": { "model": "runecraftory:cherry_grass_stage1" },
+        "status=2": { "model": "runecraftory:cherry_grass_stage2" },
+        "status=3": { "model": "runecraftory:cherry_grass_stage3" }
+    }
+}
