@@ -2,6 +2,7 @@ Credit to  jer_the_pine, who did these textures (with some small modifications b
 
 broad_sword.pngclaw_magic.pngclaymore.pngcloth_cheap.pngcloth_high_quality.pngcloth_quality.pngcrop_cabbage.pngcrop_pink_melon.pngcrop_turnip_pink.pngcrop_turnip.pngcrystal_electro.pngcrystal_love.pngcrystal_rune.pngcrystal_skull.pngdevil_blood.pngfeather_black.pngfeather_thunder.pngfeather_yellow.pngfeather.pngicon_0.png
 para_poison.pngpoison_king.pngrecipe.pngruby.pngsapphire.pngseed_turnip_pink.pngseed_turnip.pngshort_dagger.pngspear.pngstick.png
+wool_s.png
 
 Todo: 
 big crystal
