@@ -35,3 +35,4 @@ Runecraftory a0.3.0
 - Removed custom health handling and changed it back to vanilla
 - Finished the lang file
 - Quest system added with configs
+- Added water laser
